APEX-ECOM-876: Config changes and spacing fixes.

--- a/source/themes/custom/ecom/styles/components/_orders.scss
+++ b/source/themes/custom/ecom/styles/components/_orders.scss
@@ -135,6 +135,7 @@
 
       td {
         width: 25%;
+        padding-right: 8px;
       }
     }
 
